--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "import requests"
    ]
   },
   {
