--- a/index.ipynb
+++ b/index.ipynb
@@ -74,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "resp = requests.get('https://www.google.com')"
    ]
   },
   {
@@ -101,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "resp.status_code == requests.codes.ok"
    ]
   },
   {
