Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,11 +172,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Date': 'Mon, 11 Feb 2019 00:49:27 GMT',\n",
+       " 'Expires': '-1',\n",
+       " 'Cache-Control': 'private, max-age=0',\n",
+       " 'Content-Type': 'text/html; charset=ISO-8859-1',\n",
+       " 'P3P': 'CP=\"This is not a P3P policy! See g.co/p3phelp for more info.\"',\n",
+       " 'Content-Encoding': 'gzip',\n",
+       " 'Server': 'gws',\n",
+       " 'X-XSS-Protection': '1; mode=block',\n",
+       " 'X-Frame-Options': 'SAMEORIGIN',\n",
+       " 'Set-Cookie': '1P_JAR=2019-02-11-00; expires=Wed, 13-Mar-2019 00:49:27 GMT; path=/; domain=.google.com, NID=158=O3Rn-BX4bCGZMQeN_L5XOZHuk8z29JtLnHF1TrZOoHrydykNoER2GIrVsHmjX-PgKNk85rH340nH1Ltqz7nqny1WJKM1F5CF5bNGS7_JVKns2XUOtlGwKPHNlzQTSIL2GZ8fXOy7SIYVLfysncBtNNUJ47nGLxHXttdr-ywQO_E; expires=Tue, 13-Aug-2019 00:49:27 GMT; path=/; domain=.google.com; HttpOnly',\n",
+       " 'Alt-Svc': 'quic=\":443\"; ma=2592000; v=\"44,43,39\"',\n",
+       " 'Transfer-Encoding': 'chunked'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "dict(resp.headers)"
    ]
   },
   {
