Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,11 +266,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'args': {}, 'headers': {'Accept': '*/*', 'Accept-Encoding': 'gzip, deflate', 'Connection': 'close', 'Host': 'httpbin.org', 'User-Agent': 'python-requests/2.19.1'}, 'origin': '68.183.132.240', 'url': 'http://httpbin.org/get'}\n",
+      "{}\n",
+      "{'Accept': '*/*', 'Accept-Encoding': 'gzip, deflate', 'Connection': 'close', 'Host': 'httpbin.org', 'User-Agent': 'python-requests/2.19.1'}\n",
+      "*/*\n",
+      "gzip, deflate\n",
+      "close\n",
+      "httpbin.org\n",
+      "python-requests/2.19.1\n",
+      "68.183.132.240\n",
+      "http://httpbin.org/get\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "r = requests.get('http://httpbin.org/get')\n",
+    "\n",
+    "response = r.json()  \n",
+    "print(r.json())  \n",
+    "print(response['args'])  \n",
+    "print(response['headers'])  \n",
+    "print(response['headers']['Accept'])  \n",
+    "print(response['headers']['Accept-Encoding'])  \n",
+    "print(response['headers']['Connection'])  \n",
+    "print(response['headers']['Host'])  \n",
+    "print(response['headers']['User-Agent'])  \n",
+    "print(response['origin'])  \n",
+    "print(response['url'])"
    ]
   },
   {
