--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "print(r.headers['Access-Control-Allow-Credentials'])  \n",
+    "print(r.headers['Access-Control-Allow-Origin'])  \n",
+    "print(r.headers['CONNECTION'])  \n",
+    "print(r.headers['content-length'])  \n",
+    "print(r.headers['Content-Type'])  \n",
+    "print(r.headers['Date'])  \n",
+    "print(r.headers['server'])  \n",
+    "print(r.headers['via'])"
    ]
   },
   {
