Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,9 +323,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "*\n",
+      "keep-alive\n",
+      "267\n",
+      "application/json\n",
+      "Mon, 11 Feb 2019 00:50:41 GMT\n",
+      "gunicorn/19.9.0\n",
+      "1.1 vegur\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
     "print(r.headers['Access-Control-Allow-Credentials'])  \n",
