Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,11 +373,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://httpbin.org/get?user_name=trump&password=donald\n",
+      "{\n",
+      "  \"args\": {\n",
+      "    \"password\": \"donald\", \n",
+      "    \"user_name\": \"trump\"\n",
+      "  }, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Connection\": \"close\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.19.1\"\n",
+      "  }, \n",
+      "  \"origin\": \"68.183.132.240\", \n",
+      "  \"url\": \"http://httpbin.org/get?user_name=trump&password=donald\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "credentials = {'user_name': 'trump', 'password': 'donald'}  \n",
+    "r = requests.get('http://httpbin.org/get', params=credentials)\n",
+    "\n",
+    "print(r.url)  \n",
+    "print(r.text)"
    ]
   },
   {
